--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -120,18 +120,18 @@
                         <figure class="card card-product-grid">
                             <div class="img-wrap">
 
-                                <img src="{{ product.images.url }}" alt="image" />
+                                <a href="{{ product.get_url }}"><img src="{{ product.images.url }}" alt="image" /></a>
 
                             </div> <!-- img-wrap.// -->
                             <figcaption class="info-wrap">
                                 <div class="fix-height">
-                                    <a href="./product-detail.html" class="title">{{ product.product_name }}</a>
+                                    <a href="{{ product.get_url }}" class="title">{{ product.product_name }}</a>
                                     <div class="price-wrap mt-2">
                                         <span class="price">Ksh {{ product.price }}</span>
                                         <!--<del class="price-old">Ksh 1980</del> -->
                                     </div> <!-- price-wrap.// -->
                                 </div>
-                                <a href="#" class="btn btn-block btn-success">Added to cart </a>
+                                <a href="#" class="btn btn-block btn-primary">Add to cart </a>
                             </figcaption>
                         </figure>
                     </div> <!-- col.// -->
