--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 <section class="section-intro padding-y-sm">
     <div class="container">
         <div class="intro-banner-wrap">
-            <img src="{% static 'images/pricing.jpeg' %}" class="img-fluid rounded">
+            <img src="{% static 'images/pricing.jpeg' %}" class="img-fluid rounded-lg">
         </div>
     </div> <!-- container //  -->
 </section>
