--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -131,7 +131,8 @@
                                         <!--<del class="price-old">Ksh 1980</del> -->
                                     </div> <!-- price-wrap.// -->
                                 </div>
-                                <a href="#" class="btn btn-block btn-primary">Add to cart </a>
+                                <a href="{{ product.get_url }}" class="btn btn-block btn-primary">View Details
+                                </a>
                             </figcaption>
                         </figure>
                     </div> <!-- col.// -->
