--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,8 @@
     <!-- Bootstrap4 files -->
     <script src="{% static 'js/bootstrap.bundle.min.js' %}" type="text/javascript"></script>
     <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet" type="text/css" />
-
+    <!-- Bootstrap Icons -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css" rel="stylesheet">
     <!-- Font Awesome 5 -->
     <link href="{% static 'fonts/fontawesome/css/all.min.css' %}" type="text/css" rel="stylesheet">
 
