--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -8,9 +8,10 @@
                 <p class="text-muted"> &copy 2025 Mamasgold </p>
             </div>
             <div class="col-md-8 text-md-center">
-                <span class="px-2">info@mamasgold</span>
                 <span class="px-2">+254706675902</span>
-                <span class="px-2">Biashara street, Zanna exhibition G12</span>
+                <span class="px-2">Nairobi CBD, Biashara street, Zanna exhibition G12</span>
+                <br>
+                <span class="px-2">Mombasa, Taita street, Greenland Plaza F404</span>
             </div>
             <div class="col-md-2 text-md-right text-muted">
                 <i class="fab fa-lg fa-cc-visa"></i>
