--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -1,83 +1,89 @@
 {% load static %}
 
 <header class="section-header">
-    <nav class="navbar p-md-0 navbar-expand-sm navbar-light border-bottom">
+    <nav class="navbar p-md-0 navbar-expand-lg navbar-light border-bottom">
         <div class="container">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTop4"
+            <a href="{% url 'index' %}" class="navbar-brand d-lg-none">
+                <img class="logo" src="{% static 'images/logo.jpeg' %}" alt="logo" style="height: 40px;">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTop"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarTop4">
+            <div class="collapse navbar-collapse" id="navbarTop">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item dropdown">
-                        <a href="#" class="nav-link"> English </a>
-
+                        <a href="#" class="nav-link">English</a>
                     </li>
                 </ul>
-                <ul class="navbar-nav">
-                    <li><a href="#" class="nav-link"> <i class="fa fa-envelope"></i> Email <br> info@mamasgold.com </a>
-                    </li>
-                    <li><a href="#" class="nav-link"> <i class="fa fa-phone"></i> Call us <br> +254706675902 </a></li>
-                </ul> <!-- list-inline //  -->
-            </div> <!-- navbar-collapse .// -->
-        </div> <!-- container //  -->
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item"><a href="#" class="nav-link"><i class="fa fa-envelope"></i>
+                            Email<br>info@mamasgold.com</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link"><i class="fa fa-phone"></i> Call
+                            us<br>+254706675902</a></li>
+                </ul>
+            </div>
+        </div>
     </nav>
 
     <section class="header-main border-bottom">
         <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-2 col-md-3 col-6">
-                    <a href="{% url 'index' %}" class="brand-wrap">
-                        <img class="logo" src="{% static 'images/logo.jpeg' %}" alt="image">
-                    </a> <!-- brand-wrap.// -->
+            <div class="row align-items-center py-2">
+                <!-- Logo -->
+                <div class="col-lg-2 col-6">
+                    <a href="{% url 'index' %}" class="brand-wrap d-none d-lg-block">
+                        <img class="rounded logo" src="{% static 'images/logo.jpeg' %}" alt="logo">
+                    </a>
                 </div>
-                <div class="col-lg col-sm col-md col-6 flex-grow-0">
-                    <div class="category-wrap dropdown d-inline-block float-right">
-                        <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-                            <i class="fa fa-bars"></i> All categories
-                        </button>
-                        <div class="dropdown-menu">
-                            {% for category in links %}
-                            <a class="dropdown-item" href="{{ category.get_url }}">{{ category.category_name }}</a>
-                            {% endfor %}
-                        </div>
-                    </div> <!-- category-wrap.// -->
-                </div> <!-- col.// -->
-                <a href="{% url 'store' %}" class="btn btn-outline-primary">Store</a>
-                <div class="col-lg  col-md-6 col-sm-12 col">
-                    <form action="#" class="search">
-                        <div class="input-group w-100">
-                            <input type="text" class="form-control" style="width:60%;" placeholder="Search">
 
+                <!-- Category Dropdown & Store Button -->
+                <div class="col-lg-3 col-md-4 col-6 order-1">
+                    <div class="d-flex align-items-center">
+                        <div class="category-wrap dropdown mr-2">
+                            <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+                                <i class="fa fa-bars"></i> All categories
+                            </button>
+                            <div class="dropdown-menu">
+                                {% for category in links %}
+                                <a class="dropdown-item" href="{{ category.get_url }}">{{ category.category_name }}</a>
+                                {% endfor %}
+                            </div>
+                        </div>
+                        <a href="{% url 'store' %}" class="btn btn-outline-primary d-none d-md-block">Store</a>
+                    </div>
+                </div>
+
+                <!-- Search Form -->
+                <div class="col-lg-4 col-md-6 order-3 order-lg-2 mt-2 mt-md-0">
+                    <form action="#" class="search">
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="Search">
                             <div class="input-group-append">
                                 <button class="btn btn-primary" type="submit">
                                     <i class="fa fa-search"></i>
                                 </button>
                             </div>
                         </div>
-                    </form> <!-- search-wrap .end// -->
-                </div> <!-- col.// -->
-                <div class="col-lg-3 col-sm-6 col-8 order-2 order-lg-3">
-                    <div class="d-flex justify-content-end mb-3 mb-lg-0">
-                        <div class="widget-header">
+                    </form>
+                </div>
+
+                <!-- User/Cart Section -->
+                <div class="col-lg-3 col-md-4 col-12 order-2 order-lg-3">
+                    <div class="d-flex justify-content-end align-items-center">
+                        <div class="widget-header mr-3">
                             <small class="title text-muted">Welcome guest!</small>
                             <div>
-                                <a href="./signin.html">Sign in</a> <span class="dark-transp"> | </span>
+                                <a href="./signin.html">Sign in</a> <span class="dark-transp">|</span>
                                 <a href="./register.html"> Register</a>
                             </div>
                         </div>
-                        <a href="./cart.html" class="widget-header pl-3 ml-3">
-                            <div class="icon icon-sm rounded-circle border"><i class="fa fa-shopping-cart"></i>
-                            </div>
-                            <span class="badge badge-pill badge-danger notify">0</span>
+                        <a href="{% url 'cart' %}" class="position-relative">
+                            <div class="icon icon-sm rounded-circle border"><i class="fa fa-shopping-cart"></i></div>
+                            <span class="badge badge-pill badge-danger notify">{{ cart_count }}</span>
                         </a>
-                    </div> <!-- widgets-wrap.// -->
-                </div> <!-- col.// -->
-            </div> <!-- row.// -->
-        </div> <!-- container.// -->
-    </section> <!-- header-main .// -->
-
-
-
-
-</header> <!-- section-header.// -->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</header>
