--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -71,10 +71,19 @@
                         <hr>
                         {% if single_product.stock <= 0 %} <h5 class="text-danger">Out of stock</h5>
                             {% else %}
+                            {% if in_cart %}
+                            <a href="#" class="btn  btn-success"> <span class="text">Added to Cart
+                                </span><i class="bi bi-bag-check-fill"></i> </a>
+                            <a href="{% url 'cart' %}" class="btn  btn-outline-info"> <span class="text">View Cart
+                                </span><i class="bi bi-eye"></i> </a>
 
-                            <a href="./product-detail.html" class="btn  btn-primary"> <span class="text">Add to
-                                    cart</span>
-                                <i class="fas fa-shopping-cart"></i> </a>
+                            {% else %}
+                            <i class="fas fa-shopping-cart"></i> </a>
+                            <a href="{% url 'add_cart' single_product.id %}" class="btn  btn-primary"> <span
+                                    class="text">Add to
+                                    Cart</span><i class="fas fa-shopping-cart"></i>
+                            </a>
+                            {% endif %}
                             {% endif %}
                     </article> <!-- product-info-aside .// -->
                 </main> <!-- col.// -->
