--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-{% load static %} <!-- ✅ Load static before using it -->
+{% load static %}
 
 <!DOCTYPE HTML>
 <html lang="en">
@@ -13,41 +13,35 @@
 
     <link href="{% static 'images/logo.jpeg' %}" rel="shortcut icon" type="image/x-icon">
 
-    <!-- jQuery -->
     <script src="{% static 'js/jquery-2.0.0.min.js' %}" type="text/javascript"></script>
 
-    <!-- Bootstrap4 files -->
     <script src="{% static 'js/bootstrap.bundle.min.js' %}" type="text/javascript"></script>
     <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet" type="text/css" />
-    <!-- Bootstrap Icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css" rel="stylesheet">
-    <!-- Font Awesome 5 -->
+
     <link href="{% static 'fonts/fontawesome/css/all.min.css' %}" type="text/css" rel="stylesheet">
 
-    <!-- Custom Styles -->
     <link href="{% static 'css/ui.css' %}" rel="stylesheet" type="text/css" />
     <link href="{% static 'css/responsive.css' %}" rel="stylesheet" media="only screen and (max-width: 1200px)" />
 
-    <!-- Custom JavaScript -->
-    <script src="{% static 'js/script.js' %}" type="text/javascript"></script> <!-- ✅ Fixed space issue -->
+    <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
 
     <script type="text/javascript">
-        // jQuery ready function
+
         $(document).ready(function ()
         {
-            // jQuery code here...
+
         });
     </script>
 </head>
 
 <body>
-    <!--navbar-->
+
     {% include 'includes/navbar.html' %}
 
     {% block content %}
-    <!-- content -->
+
 
     {% endblock %}
 
-    <!--footer-->
     {% include 'includes/footer.html' %}
