--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -5,6 +5,16 @@
 
 <!-- ========================= SECTION CONTENT ========================= -->
 <section class="section-conten padding-y" style="min-height:84vh">
+    {% if request.GET.command == 'verification' %}
+    <div class="container mx-auto alert alert-info text-center" role="alert"
+        style="max-width: 1024px; margin-top:100px;">
+        We’ve emailed a verification link to [{{ request.GET.email }}] .<br>
+        Please check your inbox and click it to verify your account.
+        <br><br>
+        Already verified? <a href="{% url 'login' %}">Login</a>
+    </div>
+    {% else %}
+
 
     <!-- ============================ COMPONENT LOGIN   ================================= -->
     <div class="card mx-auto" style="max-width: 380px; margin-top:100px;">
@@ -36,7 +46,7 @@
     <br><br>
     <!-- ============================ COMPONENT LOGIN  END.// ================================= -->
 
-
+    {% endif %}
 </section>
 <!-- ========================= SECTION CONTENT END// ========================= -->
 
