--- a/templates/accounts/resetPassword.html
+++ b/templates/accounts/resetPassword.html
@@ -5,38 +5,27 @@
 
 <!-- ========================= SECTION CONTENT ========================= -->
 <section class="section-conten padding-y" style="min-height:84vh">
-    {% if request.GET.command == 'verification' %}
-    <div class="container mx-auto alert alert-info text-center" role="alert"
-        style="max-width: 1024px; margin-top:100px;">
-        We’ve emailed a verification link to [{{ request.GET.email }}] .<br>
-        Please check your inbox and click it to verify your account.
-        <br><br>
-        Already verified? <a href="{% url 'login' %}">Login</a>
-    </div>
-    {% else %}
+
 
 
     <!-- ============================ COMPONENT LOGIN   ================================= -->
     <div class="card mx-auto" style="max-width: 380px; margin-top:100px;">
 
         <div class="card-body">
-            <h4 class="card-title mb-4">Sign in</h4>
+            <h4 class="card-title mb-4">Reset Password</h4>
             {% include 'includes/alerts.html' %}
-            <form action="{% url 'login' %}" method="post">
+            <form action="{% url 'resetPassword' %}" method="post">
                 {% csrf_token %}
                 <div class="form-group">
-                    <input type="email" class="form-control" placeholder="Email Address" name="email" required>
+                    <input type="password" class="form-control" placeholder="Create Password" name="password" required>
                 </div> <!-- form-group// -->
                 <div class="form-group">
-                    <input type="password" class="form-control" placeholder="Password" name="password" required>
+                    <input type="password" class="form-control" placeholder="Confirm Password" name="confirm_password"
+                        required>
                 </div> <!-- form-group// -->
 
                 <div class="form-group">
-                    <a href="{% url 'forgotPassword' %}" class="float-right">Forgot password?</a>
-
-                </div> <!-- form-group form-check .// -->
-                <div class="form-group">
-                    <button type="submit" class="btn btn-primary btn-block"> Login </button>
+                    <button type="submit" class="btn btn-primary btn-block"> Reset Password </button>
                 </div> <!-- form-group// -->
             </form>
         </div> <!-- card-body.// -->
@@ -46,7 +35,6 @@
     <br><br>
     <!-- ============================ COMPONENT LOGIN  END.// ================================= -->
 
-    {% endif %}
 </section>
 <!-- ========================= SECTION CONTENT END// ========================= -->
 
