--- a/templates/store/checkout.html
+++ b/templates/store/checkout.html
@@ -15,37 +15,40 @@
                 <div class="card">
                     <div class="card-body">
                         <h4 class="card-title mb-3">Billing Address</h4>
-                        <form action="{% url 'checkout' %}" method="post">
+                        <form action="{% url 'process_checkout' %}" method="post">
                             {% csrf_token %}
                             <div class="col form-group">
                                 <label for="first_name">First Name</label>
-                                <input type="text" class="form-control" id="first_name" required>
+                                <input type="text" name="first_name" class="form-control" id="first_name" required>
                             </div>
                             <div class="col form-group">
                                 <label for="last_name">Last Name</label>
-                                <input type="text" class="form-control" id="last_name" required>
+                                <input type="text" name="last_name" class="form-control" id="last_name" required>
                             </div>
                             <div class="col form-group">
                                 <label for="email">Email</label>
-                                <input type="text" class="form-control" id="email" required>
+                                <input type="text" name="email" class="form-control" id="email" required>
                             </div>
                             <div class="col form-group">
                                 <label for="phone">Phone Number</label>
-                                <input type="text" class="form-control" id="phone" required>
+                                <input type="text" name="phone" class="form-control" id="phone" required>
                             </div>
                             <div class="col form-group">
                                 <label for="address">Address</label>
-                                <input type="text" class="form-control" id="address" required>
+                                <input type="text" name="address" class="form-control" id="address" required>
                             </div>
                             <div class="col form-group">
-                                <label for="country">City</label>
-                                <input type="text" class="form-control" id="country" required>
+                                <label for="city">City</label>
+                                <input type="text" name="city" class="form-control" id="city" required>
                             </div>
                             <div class="col form-group">
                                 <label for="additional_info">Additional Information</label>
-                                <input type="text" class="form-control" id="additional_info" required>
+                                <input type="text" name="additional_info" class="form-control" id="additional_info"
+                                    required>
                             </div>
+                            <button type="submit" class="btn btn-primary btn-block"> Place Order </button>
                         </form>
+
                     </div>
                 </div> <!-- card.// -->
 
@@ -90,7 +93,6 @@
                             </tbody>
                         </table>
 
-                        <a href="{% url 'checkout' %}" class="btn btn-primary btn-block"> Place Order </a>
                         <a href="{% url 'store' %}" class="btn btn-light btn-block">Continue Shopping</a>
                     </div> <!-- card-body.// -->
                 </div> <!-- card.// -->
