--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -17,16 +17,16 @@
                     <!-- Social Media Links -->
                     <div class="social-links">
                         <h6 class="text-white mb-2">Follow Us</h6>
-                        <a href="#" class="btn btn-outline-light btn-sm me-2 mb-2" aria-label="Facebook">
+                        <a href="https://www.facebook.com/mamasgoldkenya/"
+                            class="btn btn-outline-light btn-sm me-2 mb-2" aria-label="Facebook">
                             <i class="fab fa-facebook-f"></i>
                         </a>
-                        <a href="#" class="btn btn-outline-light btn-sm me-2 mb-2" aria-label="Twitter">
-                            <i class="fab fa-twitter"></i>
-                        </a>
-                        <a href="#" class="btn btn-outline-light btn-sm me-2 mb-2" aria-label="Instagram">
+                        <a href="https://www.instagram.com/mamasgold_lactation_ke/"
+                            class="btn btn-outline-light btn-sm me-2 mb-2" aria-label="Instagram">
                             <i class="fab fa-instagram"></i>
                         </a>
-                        <a href="#" class="btn btn-outline-light btn-sm me-2 mb-2" aria-label="WhatsApp">
+                        <a href="https://wa.me/254706675902" class="btn btn-outline-light btn-sm me-2 mb-2"
+                            aria-label="WhatsApp" target="_blank" rel="noopener noreferrer">
                             <i class="fab fa-whatsapp"></i>
                         </a>
                     </div>
@@ -57,11 +57,6 @@
                             <i class="fa fa-angle-right me-2"></i>Contact
                         </a>
                     </li>
-                    <li class="mb-2">
-                        <a href="#" class="text-muted text-decoration-none hover-link">
-                            <i class="fa fa-angle-right me-2"></i>Blog
-                        </a>
-                    </li>
                 </ul>
             </div>
 
@@ -78,17 +73,7 @@
                     {% empty %}
                     <li class="mb-2">
                         <a href="#" class="text-muted text-decoration-none hover-link">
-                            <i class="fa fa-angle-right me-2"></i>Electronics
-                        </a>
-                    </li>
-                    <li class="mb-2">
-                        <a href="#" class="text-muted text-decoration-none hover-link">
-                            <i class="fa fa-angle-right me-2"></i>Fashion
-                        </a>
-                    </li>
-                    <li class="mb-2">
-                        <a href="#" class="text-muted text-decoration-none hover-link">
-                            <i class="fa fa-angle-right me-2"></i>Home & Garden
+                            <i class="fa fa-angle-right me-2"></i>No categories found
                         </a>
                     </li>
                     {% endfor %}
@@ -199,10 +184,7 @@
                 <div class="col-lg-3 text-lg-end">
                     <div class="payment-methods">
                         <small class="text-muted d-block mb-1">We Accept:</small>
-                        <i class="fab fa-cc-visa fa-lg text-primary me-2" title="Visa"></i>
-                        <i class="fab fa-cc-mastercard fa-lg text-warning me-2" title="Mastercard"></i>
-                        <i class="fab fa-cc-paypal fa-lg text-info me-2" title="PayPal"></i>
-                        <i class="fa fa-mobile-alt fa-lg text-success" title="M-Pesa"></i>
+                        <i class="fa fa-mobile-alt fa-lg text-success" title="M-Pesa">MPESA</i>
                     </div>
                 </div>
             </div>
