--- a/templates/about.html
+++ b/templates/about.html
@@ -1,51 +1,8 @@
 {% extends 'base.html' %}
-
 {% load static %}
 
-{% block title %}Mamasgold | Premium Lactation Support for New Moms{% endblock %}
-
-{% block meta_description %}Shop Mamasgold for the best lactation teas, supplements, and snacks. Our products are
-designed to help new moms increase milk supply and breastfeed with confidence.{% endblock %}
-
+{% block title %}About Us | Mamasgold{% endblock %}
 {% block content %}
-
-<!-- ========================= SECTION MAIN ========================= -->
-<section class="section-intro padding-y-sm">
-    <div class="container">
-        <div class="intro-banner-wrap">
-            <img src="{% static 'images/pricing.jpeg' %}" class="img-fluid rounded-lg" alt="Mamasgold product pricing">
-        </div>
-        <h1 class="mt-3">Your Trusted Partner in Lactation Support</h1>
-    </div> <!-- container //  -->
-</section>
-<!-- ========================= SECTION MAIN END// ========================= -->
-
-<!-- ========================= SECTION  ========================= -->
-<section class="section-name padding-y-sm">
-    <div class="container">
-        <header class="section-heading">
-            <a href="{% url 'store' %}" class="btn btn-outline-primary float-right">See all</a>
-            <h2 class="section-title">Popular products</h2>
-        </header><!-- sect-heading -->
-
-        <div class="row">
-            {% for product in products %}
-            <div class="col-md-3">
-                <div class="card card-product-grid">
-                    <a href="{{ product.get_url }}" class="img-wrap">
-                        <img src="{{ product.images.url }}" alt="{{ product.product_name }}">
-                    </a>
-                    <figcaption class="info-wrap">
-                        <a href="{{ product.get_url }}" class="title">{{ product.product_name }}</a>
-                        <div class="price mt-1">Ksh {{ product.price }}</div> <!-- price-wrap.// -->
-                    </figcaption>
-                </div>
-            </div> <!-- col.// -->
-            {% endfor %}
-        </div> <!-- row.// -->
-    </div><!-- container // -->
-</section>
-<!-- ========================= SECTION  END// ========================= -->
 
 
 <section class="py-5">
@@ -88,9 +45,5 @@ designed to help new moms increase milk supply and breastfeed with confidence.{%
         </div>
     </div>
 </section>
-
-</body>
-
-</html>
 
 {% endblock %}
