--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -48,7 +48,7 @@
                         </a>
                     </li>
                     <li class="mb-2">
-                        <a href="#" class="text-muted text-decoration-none hover-link">
+                        <a href="{% url 'about' %}" class="text-muted text-decoration-none hover-link">
                             <i class="fa fa-angle-right me-2"></i>About Us
                         </a>
                     </li>
